# self-ref-quantum-cli

./: .gitignore  Agent1_asset.rho.json  Agent2_asset.rho.json  AuditAgent_101_asset.rho.json  AuditAgent_103_asset.rho.json  AuditAgent_104_asset.rho.json  AuditAgent_105_asset.rho.json  AuditAgent_106_asset.rho.json  AuditAgent_107_asset.rho.json  AuditAgent_108_asset.rho.json  AuditAgent_109_asset.rho.json  AuditAgent_11_asset.rho.json  AuditAgent_12_asset.rho.json  AuditAgent_13_asset.rho.json  AuditAgent_16_asset.rho.json  AuditAgent_17_asset.rho.json  AuditAgent_18_asset.rho.json  AuditAgent_19_asset.rho.json  AuditAgent_21_asset.rho.json  AuditAgent_27_asset.rho.json  AuditAgent_29_asset.rho.json  AuditAgent_2_asset.rho.json  AuditAgent_31_asset.rho.json  AuditAgent_33_asset.rho.json  AuditAgent_34_asset.rho.json  AuditAgent_35_asset.rho.json  AuditAgent_36_asset.rho.json  AuditAgent_37_asset.rho.json  AuditAgent_3_asset.rho.json  AuditAgent_40_asset.rho.json  AuditAgent_44_asset.rho.json  AuditAgent_48_asset.rho.json  AuditAgent_49_asset.rho.json  AuditAgent_4_asset.rho.json  AuditAgent_51_asset.rho.json  AuditAgent_54_asset.rho.json  AuditAgent_55_asset.rho.json  AuditAgent_56_asset.rho.json  AuditAgent_58_asset.rho.json  AuditAgent_5_asset.rho.json  (+201 more)
benchmarks/: SRD_100.json  calibrate_thresholds.py  generate_srd_100.py  hallucination_audit_final.py  industry_standard_benchmark.py
docs/: GRAND_FINALE_REPORT.md  RELEASE_NOTES_v2.0.md  SCIENTIFIC_VERIFICATION.md  internal_safety_report.json  scientific_rigor_report.json
examples/: automated_lab_session.py  (+4 more)
(+368 files in other folders)
